src/test/resources/org/nest/nestml/_cocos/invalid/varHasTypeName.nestml
neuron B:
  state:
    ms ms = 15.0 # ERROR ms is predefined
  end

  update:
    mV mV = 0 # ERROR mV is predefined
  end

  function method(V mV): # ERROR V is predefined
  end
end
